AT GUI: Fix for list of IP address in IP traffic page no longer getting wrapped

--- a/release/src-rt-6.x.4708/router/www/css/interface.css
+++ b/release/src-rt-6.x.4708/router/www/css/interface.css
@@ -1446,7 +1446,7 @@ button.btn {
 }
 
 .btn-group {
-  white-space: nowrap;
+  /* white-space: nowrap; */
   font-size: 0;
 }
 
